--- a/servoo_shipping/i18n/fr.po
+++ b/servoo_shipping/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0-20220616\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-23 16:57+0000\n"
-"PO-Revision-Date: 2022-10-23 16:57+0000\n"
+"POT-Creation-Date: 2022-10-29 19:17+0000\n"
+"PO-Revision-Date: 2022-10-29 19:17+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -524,7 +524,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__call_sign
 msgid "Call Sign"
-msgstr ""
+msgstr "Signe d'appel"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__campaign_id
@@ -562,20 +562,37 @@ msgid "Cargo Declaration"
 msgstr "Marchandises"
 
 #. module: servoo_shipping
+#: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__cargo_description
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_bl_form
+msgid "Cargo Description"
+msgstr "Description de la cargaisson"
+
+#. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__gross_weight
 msgid "Cargo gross tonnage (kg)"
-msgstr "Tonnage brut des marchandises (kg)"
+msgstr "Tonnage brut de la cargaison (kg)"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__net_weight
 msgid "Cargo net tonnage (kg)"
-msgstr "Tonnage net des marchandises (kg)"
+msgstr "Tonnage net de la cargaison (kg)"
+
+#. module: servoo_shipping
+#: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__cargo_weight
+msgid "Cargo weight"
+msgstr "Poids de la cargaison"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__product_uom_category_id
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template_line__product_uom_category_id
 msgid "Category"
 msgstr "Catégorie"
+
+#. module: servoo_shipping
+#: model:ir.model.constraint,message:servoo_shipping.constraint_servoo_shipping_file_name_uniq
+msgid "Cette référence doit être unique"
+msgstr ""
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__charterer_id
@@ -649,6 +666,7 @@ msgid ""
 msgstr ""
 
 #. module: servoo_shipping
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_bl_form
 msgid "Create Delivery Order"
 msgstr "Créer un bon de livraison"
@@ -677,7 +695,7 @@ msgstr "Créez un nouveau bon de livraison !"
 #. module: servoo_shipping
 #: model_terms:ir.actions.act_window,help:servoo_shipping.action_shipping_file_type
 msgid "Create a new shipping file type!"
-msgstr "Créér un nouveau type de dossier shipping !"
+msgstr "Créér un nouveau type de dossier shipping!"
 
 #. module: servoo_shipping
 #: model_terms:ir.actions.act_window,help:servoo_shipping.action_shipping_file
@@ -1130,7 +1148,7 @@ msgstr "Dossier"
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__file_type_id
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_file_type_tree
 msgid "File Type"
-msgstr ""
+msgstr "Type de dossier"
 
 #. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.report_delivery_order_document
@@ -1226,7 +1244,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__grt
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template__grt
 msgid "GRT"
-msgstr ""
+msgstr "Jauge brute (GRT)"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_person__gender
@@ -1237,6 +1255,11 @@ msgstr "Genre"
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
 msgid "General Declaration"
 msgstr "Déclaration Générale"
+
+#. module: servoo_shipping
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
+msgid "Generate XML"
+msgstr "Générer le XML"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_person__given_names
@@ -1272,11 +1295,15 @@ msgid "Goods"
 msgstr "Marchandises"
 
 #. module: servoo_shipping
-#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
-#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_bl_form
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_delivery_order_form
 msgid "Goods Description"
-msgstr ""
+msgstr "Description des marchandises"
+
+#. module: servoo_shipping
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_servoo_shipping_file_form
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_bl_form
+msgid "Goods Details"
+msgstr "Détails des marchandises"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_dangerous_good__gross_weight
@@ -1633,7 +1660,7 @@ msgstr "Emplacement à bord"
 #. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
 msgid "Lose"
-msgstr ""
+msgstr "Perdre"
 
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_pda__state__lost
@@ -1766,7 +1793,7 @@ msgstr "Poids net (kg)"
 #: code:addons/servoo_shipping/models/shipping_pda.py:0
 #, python-format
 msgid "New"
-msgstr ""
+msgstr "Nouveau"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_calendar_event_id
@@ -2194,12 +2221,12 @@ msgstr ""
 #. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.shipping_pda_template_view_form
 msgid "Quotation Template Lines"
-msgstr ""
+msgstr "Lignes modèle de PDA"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template_line__shipping_pda_template_id
 msgid "Quotation Template Reference"
-msgstr ""
+msgstr "Référence modèle PDA"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_crew__rank
@@ -2266,7 +2293,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_bl__state__saved
 msgid "Saved"
-msgstr ""
+msgstr "Enregistré"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_container__seal_1
@@ -2329,7 +2356,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file_type__sequence_code
 msgid "Sequence Code"
-msgstr ""
+msgstr "Code séquence"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_formality__service_id
@@ -2365,13 +2392,13 @@ msgstr "Magasins du navire"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__shipowner_id
 msgid "Shipowner"
-msgstr ""
+msgstr "Armateur"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__shipper_id
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_delivery_order__shipper_id
 msgid "Shipper"
-msgstr ""
+msgstr "Chargeur"
 
 #. module: servoo_shipping
 #: model:ir.module.category,name:servoo_shipping.module_category_shipping_management
@@ -2404,17 +2431,17 @@ msgstr "Dossiers Shipping"
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_pda
 msgid "Shipping PDA"
-msgstr ""
+msgstr "PDA"
 
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_pda_line
 msgid "Shipping PDA Line"
-msgstr ""
+msgstr "Lignes PDA"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__shipping_file_id
 msgid "Shipping file"
-msgstr ""
+msgstr "Dossier Shipping"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_container__size_type_id
@@ -2441,7 +2468,7 @@ msgstr "Date de début"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__state
 msgid "State"
-msgstr ""
+msgstr "Statut"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__state
@@ -2638,7 +2665,6 @@ msgstr ""
 
 #. module: servoo_shipping
 #: code:addons/servoo_shipping/models/shipping_file.py:0
-#: model:ir.model.constraint,message:servoo_shipping.constraint_servoo_shipping_file_name_uniq
 #, python-format
 msgid "This reference must be unique!"
 msgstr "Cette référence doit être unique"
@@ -2709,7 +2735,7 @@ msgstr "Voyage"
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__voyage_number
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__voyage_number
 msgid "Travel Number"
-msgstr "Numero de voyage"
+msgstr "Numero voyage"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,help:servoo_shipping.field_servoo_shipping_bl__activity_exception_decoration
@@ -2722,31 +2748,31 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_dangerous_good__un_number
 msgid "UN Number"
-msgstr ""
+msgstr "Numéro UN"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_dangerous_good__unit_id
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_good__unit_id
 msgid "Unit"
-msgstr ""
+msgstr "Unité"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__price_unit
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template_line__unit_price
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.report_pda_document
 msgid "Unit Price"
-msgstr ""
+msgstr "Prix unitaire"
 
 #. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
 msgid "Unit Price:"
-msgstr ""
+msgstr "Prix unitaire:"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__product_uom
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template_line__product_uom_id
 msgid "Unit of Measure"
-msgstr ""
+msgstr "Unité de mesure"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__message_unread
@@ -2926,7 +2952,8 @@ msgstr "Gagné"
 msgid ""
 "You can not delete a sent pda or a confirmed one. You must first cancel it."
 msgstr ""
-"Vous ne pouvez pas supprimer un PDA envoyé ou confirmé. Vous devez d'abord l'annuler."
+"Vous ne pouvez pas supprimer un PDA envoyé ou confirmé. Vous devez d'abord "
+"l'annuler."
 
 #. module: servoo_shipping
 #: code:addons/servoo_shipping/models/shipping_pda_line.py:0
@@ -2987,22 +3014,22 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_container
 msgid "servoo.shipping.container"
-msgstr ""
+msgstr "Conteneur"
 
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_file
 msgid "servoo.shipping.file"
-msgstr ""
+msgstr "Dossier Shipping"
 
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_file_type
 msgid "servoo.shipping.file.type"
-msgstr ""
+msgstr "Type de dossier Shipping"
 
 #. module: servoo_shipping
 #: model:ir.model,name:servoo_shipping.model_servoo_shipping_good
 msgid "servoo.shipping.good"
-msgstr ""
+msgstr "Marchandise"
 
 #. module: servoo_shipping
 #: model:ir.ui.menu,name:servoo_shipping.shipping_menu_root
