--- a/servoo_purchase/i18n/fr.po
+++ b/servoo_purchase/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0-20220616\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-01 19:26+0000\n"
-"PO-Revision-Date: 2022-10-01 19:26+0000\n"
+"POT-Creation-Date: 2022-11-10 07:59+0000\n"
+"PO-Revision-Date: 2022-11-10 07:59+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -17,8 +17,10 @@ msgstr ""
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
-msgid "<span>Conditions / guarantees:</span>"
-msgstr "<span>Conditions / garanties:</span>"
+msgid ""
+"<br/>\n"
+"            <u><span>Conditions / guarantees:</span></u>"
+msgstr ""
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
@@ -33,7 +35,7 @@ msgstr "<span>Mode de paiement</span>"
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
 msgid "<span>Site: AGENCE DE PRESTATIONS MARITIMES</span>"
-msgstr "<span>Site: AGENCE DE PRESTATIONS MARITIMES</span>"
+msgstr ""
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
@@ -58,7 +60,7 @@ msgstr "<strong>Direction concernée</strong>"
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
 msgid "<strong>Description</strong>"
-msgstr "<strong>Description</strong>"
+msgstr ""
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
@@ -139,6 +141,11 @@ msgstr "État d'activité"
 #: model:ir.model.fields,field_description:servoo_purchase.field_servoo_purchase_need__activity_type_icon
 msgid "Activity Type Icon"
 msgstr "Icône du type d'activité"
+
+#. module: servoo_purchase
+#: model_terms:ir.ui.view,arch_db:servoo_purchase.view_purchase_fleet_tank_form
+msgid "Add Fuel"
+msgstr ""
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
@@ -331,6 +338,11 @@ msgstr "Suiveurs (Partenaires)"
 #: model:ir.model.fields,help:servoo_purchase.field_servoo_purchase_need__activity_type_icon
 msgid "Font awesome icon e.g. fa-tasks"
 msgstr ""
+
+#. module: servoo_purchase
+#: model:ir.ui.menu,name:servoo_purchase.purchase_fuel_tank_menu
+msgid "Fuel Tank"
+msgstr "Réservoir de carburant"
 
 #. module: servoo_purchase
 #: model:ir.model.fields,field_description:servoo_purchase.field_servoo_purchase_need__has_message
